objects/maps__ArcGISBatchPushLog__c.object
<CustomObject>
    <fields>
        <fullName>maps__Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RecordID__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Maps ArcGIS Batch Push Log</label>
    <nameField>
        <label>Maps ArcGIS Batch Push Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps ArcGIS Batch Push Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>